# actix-login

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  package-lock.json  package.json
.github/workflows/: ci.yml
assets/: main.scss
src/: main.rs  routes.rs  startup.rs
src/routes/: index.rs  login.rs  logout.rs  mod.rs  secure.rs
templates/: base.html  index.html  login.html  navbar.html
tests/: test_index.rs  test_login.rs  test_logout.rs  test_secure.rs
tests/fixtures/: mod.rs  test_app.rs
