[package]
name = "actix-login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix_login"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
askama = "0.12.0"
bytes = "1.5.0"
env_logger = "0.10.0"
lexopt = "0.3.0"
reqwest = "0.11.20"
scraper = "0.17.1"
tokio = "1.32.0"
